Android: FINALLY fixed crash bug when clicking on options menu on Samsung devices. The problem was due to setting a color to panelFullBackground instead of a drawable. However, the text is black instead of white... haven't found a solution in the last hour and a half. Sometimes Android makes you sweat for stupid reasons like that...
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -620,6 +620,7 @@
     <AndroidResource Include="Resources\drawable-xhdpi\actionbar_playlist.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_playlist.png" />
     <AndroidResource Include="Resources\drawable\carrouseldot.xml" />
+    <AndroidResource Include="Resources\drawable\optionsmenu.xml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
