--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -49,13 +49,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>False</ConsolePause>
-    <CodesignKey>iPhone Developer: Yanick Castonguay (N8WC5U9B3N)</CodesignKey>
+    <CodesignKey>iPhone Developer: Yanick Castonguay (763X75NJ3E)</CodesignKey>
     <MtouchDebug>True</MtouchDebug>
     <IpaPackageName />
     <MtouchI18n />
     <MtouchArch>ARMv7</MtouchArch>
     <MtouchExtraArgs>-v -v -v --compiler=clang -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -framework AudioToolbox -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
     <CrashReportingApiKey />
+    <CodesignProvision>2BCECEF9-924B-47F1-9491-7EBB70258A12</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -273,6 +274,10 @@
     </Compile>
     <Compile Include="Classes\Controls\MPfmPlayerButton.cs" />
     <Compile Include="Classes\Providers\iOSAppConfigProvider.cs" />
+    <Compile Include="Classes\Controllers\SyncCloudViewController.cs" />
+    <Compile Include="Classes\Controllers\SyncCloudViewController.designer.cs">
+      <DependentUpon>SyncCloudViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
@@ -327,6 +332,8 @@
     <InterfaceDefinition Include="XIB\iPad\SelectPlaylistViewController_iPad.xib" />
     <InterfaceDefinition Include="XIB\iPhone\AddPlaylistViewController_iPhone.xib" />
     <InterfaceDefinition Include="XIB\iPad\AddPlaylistViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPad\SyncCloudViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPhone\SyncCloudViewController_iPhone.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -525,7 +532,7 @@
   </ItemGroup>
   <ItemGroup>
     <XamarinComponentReference Include="dropboxsync">
-      <InstallationInProgress>True</InstallationInProgress>
+      <InstallationInProgress>False</InstallationInProgress>
       <Version>1.9.1</Version>
       <Visible>False</Visible>
     </XamarinComponentReference>
