--- a/MPfm/MPfm.Library/MPfm.Library.Android.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.Android.csproj
@@ -117,6 +117,10 @@
     <EmbeddedResource Include="Scripts\1.01-1.02.sql" />
     <EmbeddedResource Include="Scripts\1.00-1.01.sql" />
     <EmbeddedResource Include="Scripts\CreateDatabase.sql" />
+    <Content Include="Lib\Common.Logging.dll" />
+    <Content Include="Lib\Spring.Rest.dll" />
+    <Content Include="Lib\Spring.Social.Core.dll" />
+    <Content Include="Lib\Spring.Social.Dropbox.dll" />
     <Content Include="Lib\SQLite.Interop.dll" />
     <Content Include="Lib\System.Data.SQLite.dll" />
     <Content Include="Lib\System.Data.SQLite.Linq.dll" />
@@ -164,6 +168,8 @@
     <Compile Include="Database\SQLiteGateway.cs" />
     <Compile Include="Objects\Folder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DropboxCoreService.cs" />
+    <Compile Include="Services\Interfaces\IDropboxService.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryArgument.cs" />
