--- a/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
@@ -244,5 +244,7 @@
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
+    <Compile Include="Services\Interfaces\IDropboxService.cs" />
+    <Compile Include="Services\DropboxCoreService.cs" />
   </ItemGroup>
 </Project>
