--- a/MPfm/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/MPfm.GTK/MPfm.GTK.csproj
@@ -128,6 +128,10 @@
     <Compile Include="Classes\Helpers\ResourceHelper.cs" />
     <Compile Include="Windows\SyncDownloadWindow.cs" />
     <Compile Include="gtk-gui\MPfm.GTK.SyncDownloadWindow.cs" />
+    <Compile Include="Windows\SyncCloudWindow.cs" />
+    <Compile Include="gtk-gui\MPfm.GTK.SyncCloudWindow.cs" />
+    <Compile Include="Windows\SyncWebBrowserWindow.cs" />
+    <Compile Include="gtk-gui\MPfm.GTK.SyncWebBrowserWindow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
