--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -142,6 +142,10 @@
     <Compile Include="Presenters\AudioPreferencesPresenter.cs" />
     <Compile Include="Presenters\AddPlaylistPresenter.cs" />
     <Compile Include="Presenters\AddMarkerPresenter.cs" />
+    <Compile Include="Presenters\SyncConnectManualPresenter.cs" />
+    <Compile Include="Presenters\ResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISyncConnectManualPresenter.cs" />
     <Compile Include="Presenters\SyncCloudPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISyncCloudPresenter.cs" />
     <Compile Include="Presenters\SelectFoldersPresenter.cs" />
@@ -165,6 +169,8 @@
     <Compile Include="Presenters\Interfaces\IAudioPreferencesPresenter.cs" />
     <Compile Include="Presenters\UpdateLibraryPresenter.cs" />
     <Compile Include="Models\PlayerPositionEntity.cs" />
+    <Compile Include="Views\IResumePlaybackView.cs" />
+    <Compile Include="Views\ISyncConnectManualView.cs" />
     <Compile Include="Views\ISyncCloudView.cs" />
     <Compile Include="Views\ISelectFoldersView.cs" />
     <Compile Include="Views\IAddMarkerView.cs" />
