--- a/MPfm/MPfm.Library/packages.config
+++ b/MPfm/MPfm.Library/packages.config
@@ -4,5 +4,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="wp80" />
   <package id="Microsoft.Net.Http" version="2.2.15" targetFramework="wp80" />
   <package id="PortableTPL" version="1.0.1" targetFramework="wp80" />
-  <package id="sqlite-net" version="1.0.7" targetFramework="win" />
+  <package id="sqlite-net" version="1.0.7" targetFramework="wp80" />
 </packages>
