--- a/MPfm/MPfm.MVP/MPfm.MVP.WindowsPhone.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.WindowsPhone.csproj
@@ -146,8 +146,11 @@
     <Compile Include="Presenters\AudioPreferencesPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IAddMarkerPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IAddPlaylistPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IResumePlaybackPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISelectFoldersPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISelectPlaylistPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISyncCloudPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISyncConnectManualPresenter.cs" />
     <Compile Include="Presenters\MobileFirstRunPresenter.cs" />
     <Compile Include="Presenters\DesktopFirstRunPresenter.cs" />
     <Compile Include="Presenters\EditSongMetadataPresenter.cs" />
@@ -161,8 +164,11 @@
     <Compile Include="Presenters\LibraryPreferencesPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ILibraryPreferencesPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IAudioPreferencesPresenter.cs" />
+    <Compile Include="Presenters\ResumePlaybackPresenter.cs" />
     <Compile Include="Presenters\SelectFoldersPresenter.cs" />
     <Compile Include="Presenters\SelectPlaylistPresenter.cs" />
+    <Compile Include="Presenters\SyncCloudPresenter.cs" />
+    <Compile Include="Presenters\SyncConnectManualPresenter.cs" />
     <Compile Include="Presenters\UpdateLibraryPresenter.cs" />
     <Compile Include="Models\PlayerPositionEntity.cs" />
     <Compile Include="Views\IAddMarkerView.cs" />
@@ -175,8 +181,11 @@
     <Compile Include="Views\ILibraryPreferencesView.cs" />
     <Compile Include="Views\IGeneralPreferencesView.cs" />
     <Compile Include="Views\IAudioPreferencesView.cs" />
+    <Compile Include="Views\IResumePlaybackView.cs" />
     <Compile Include="Views\ISelectFoldersView.cs" />
     <Compile Include="Views\ISelectPlaylistView.cs" />
+    <Compile Include="Views\ISyncCloudView.cs" />
+    <Compile Include="Views\ISyncConnectManualView.cs" />
     <Compile Include="Views\IUpdateLibraryView.cs" />
     <Compile Include="Bootstrap\Bootstrapper.cs" />
     <Compile Include="Presenters\PlayerPresenter.cs" />
@@ -198,8 +207,8 @@
     <Compile Include="Presenters\SplashPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISplashPresenter.cs" />
     <Compile Include="Views\ISplashView.cs" />
-    <Compile Include="Config\RootAppConfig.cs" />    
-	<Compile Include="Config\IAppConfig.cs" />
+    <Compile Include="Config\RootAppConfig.cs" />
+    <Compile Include="Config\IAppConfig.cs" />
     <Compile Include="Config\Providers\XmlAppConfigProvider.cs" />
     <Compile Include="Config\Providers\IAppConfigProvider.cs" />
     <Compile Include="Config\AppConfigManager.cs" />
