iOS: More work on Dropbox prototype; the device infos are now shown in IResumePlaybackView! Now pushing device info as a file. Added SyncConnectManual (empty for now).
Related to issue #405.

--- a/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
@@ -244,7 +244,9 @@
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
-    <Compile Include="Services\Interfaces\IDropboxService.cs" />
     <Compile Include="Services\DropboxCoreService.cs" />
+    <Compile Include="Services\Interfaces\ICloudLibraryService.cs" />
+    <Compile Include="Objects\CloudPlaylist.cs" />
+    <Compile Include="Objects\CloudDeviceInfo.cs" />
   </ItemGroup>
 </Project>
