--- a/MPfm/MPfm.iOS/Info.plist
+++ b/MPfm/MPfm.iOS/Info.plist
@@ -74,7 +74,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>db-6tc6565743i743n</string>
+				<string>db-m1bcpax276elhfi</string>
 			</array>
 		</dict>
 	</array>
