--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -337,5 +337,11 @@
     <Compile Include="Views\ISyncCloudView.cs" />
     <Compile Include="Presenters\Interfaces\ISyncCloudPresenter.cs" />
     <Compile Include="Presenters\SyncCloudPresenter.cs" />
+    <Compile Include="Views\IResumePlaybackView.cs" />
+    <Compile Include="Views\ISyncConnectManualView.cs" />
+    <Compile Include="Presenters\Interfaces\IResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISyncConnectManualPresenter.cs" />
+    <Compile Include="Presenters\ResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\SyncConnectManualPresenter.cs" />
   </ItemGroup>
 </Project>
