iOS: Added ResumePlaybackTableViewCell with a lot more info to display for Resume Playback. The player now actually resumes to the same song as the other devices! Fixed bugs in Resume Playback view.
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -290,6 +290,9 @@
     <Compile Include="Classes\Controllers\SyncConnectManualViewController.designer.cs">
       <DependentUpon>SyncConnectManualViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Controls\MPfmResumePlaybackTableViewCell.cs">
+      <DependentUpon>MPfmCollectionViewCell.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
