WPF: Added most of the UI for ResumePlayback and Preferences.

--- a/MPfm/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Database\Interfaces\IDatabaseFacade.cs" />
     <Compile Include="Database\Interfaces\ISQLiteGateway.cs" />
     <Compile Include="Database\DatabaseFacade.cs" />
+    <Compile Include="Objects\CloudDeviceInfo.cs" />
+    <Compile Include="Objects\CloudPlaylist.cs" />
     <Compile Include="Objects\PlaylistAudioFile.cs" />
     <Compile Include="Objects\NetworkState.cs" />
     <Compile Include="Objects\PlaylistFile.cs" />
@@ -180,7 +182,7 @@
     <Compile Include="Objects\Folder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DropboxCoreService.cs" />
-    <Compile Include="Services\Interfaces\IDropboxService.cs" />
+    <Compile Include="Services\Interfaces\ICloudLibraryService.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryArgument.cs" />
